# aws_cfn_resource_ews_kafka_acls

./: .editorconfig  .gitignore  .rpdk-config  MANIFEST.in  Makefile  README.rst  cfn-kafka-acl-provider-function.yaml  ews-kafka-acl.json  pyproject.toml  requirements.txt  resource-role.yaml  template.yml
docs/: README.md  policy.md
src/: ews-kafka-acl.json  setup.py
src/ews_kafka_acl/: __init__.py  acls_management.py  common.py  custom_resource.py  handlers.py  models.py
